samples/_failures_safe/1761458122_47d840_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee411d90.c: In function ‘main’:
./samples/SAFE/__tmp_ee411d90.c:167:23: error: expected ‘;’ at end of input
  167 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_ee411d90.c:167:17: error: expected declaration or statement at end of input
  167 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_ee411d90.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee411d90.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee411d90.c:167:17: error: expected declaration or statement at end of input
